--- a/SparcWeb/Pages/BlogList.razor
+++ b/SparcWeb/Pages/BlogList.razor
@@ -2,12 +2,9 @@
 
 <div class="blog-list-page">
     <div class="container">
-        <section class="blog-hero">
-            <div class="title">
-                <h2 class="title-1">Blog</h2>
-                <p class="title-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-            </div>
-            <div class="project-tags">
+        <div class="blog-hero">
+            <h2 class="title-1">Blog</h2>
+@*            <div class="project-tags">
                 <button class="btn-small tag">Productivity</button>
                 <button class="btn-small tag">Productivity</button>
                 <button class="btn-small tag">Productivity</button>
@@ -15,31 +12,38 @@
                 <button class="btn-small tag">Productivity</button>
                 <button class="btn-small tag">Productivity</button>
                 <button class="btn-small tag">Productivity</button>
-            </div>
-        </section>
-
-        <section class="blog-featured">
+            </div>*@
+        </div>
+        
+        <section class="blog-featured" @onclick="@(e => GoTo("law-of-100-behind-the-project"))">
             <div class="left">
                 <div class="blog-image-wrapper">
-                    <img src="./images/Laptop.png" />
+                    <img src="/images/Laptop.png" />
                 </div>
             </div>
             <div class="right">
                 <div class="wrapper">
-                    <div class="blog-tags">
+@*                    <div class="blog-tags">
                     <p class="small">Design</p>
                     <div class="seperation-line"></div>
                     <p class="small">Design</p>
                     <div class="seperation-line"></div>
                     <p class="small">Design</p>
-                    </div>
+                    </div>*@
                     <div class="title">
-                        <h5 class="subtitle-large semi-bold">How to tackle HTML/CSS as a beginner (All you need to know is in here!)</h5>
-                        <p class="title-2">Nunc pulvinar sapien et ligula. Hac habitasse platea dictumst quisque. Venenatis cras sed felis eget velit aliquet sagittis id. Iaculis eu non diam phasellus vestibulum. Adipiscing elit pellentesque habitant morbi.</p>
+                        <h5 class="subtitle-large semi-bold">Law of 100 - Behind The Project</h5>
+                        <p class="title-2">
+                            Law Of 100 is one of the Sparc team's latest projects this year. 
+                            It is a web app wherein a person can log in daily for one hundred 
+                            days to track whatever goal or habit they want to create or break. 
+                            This is the first habit tracker project the team has done so far. And like all other Sparc Projects, 
+                            Law Of 100 is open source, something that tech people could appreciate. 
+                            But its creation is what makes it really special.
+                        </p>
                     </div>
                     <div class="posted">
-                        <p>Mary Jane</p>
-                        <p>1/1/2022</p>
+                        <p></p>
+                        <p>10/20/2022</p>
                     </div>
                 </div>
             </div>
@@ -104,65 +108,11 @@
                         <p>1/1/2022</p>
                     </div>
                 </div>
-
-                <div class="blog-card">
-                    <div class="card-image">
-                        <img src="./images/Laptop.png" />
-                    </div>
-                    <div class="blog-tags">
-                        <p class="small">Design</p>
-                        <div class="seperation-line"></div>
-                        <p class="small">Design</p>
-                        <div class="seperation-line"></div>
-                        <p class="small">Design</p>
-                    </div>
-                    <div class="title">
-                        <h5 class="subtitle-large semi-bold">2022 Trending Web design</h5>
-                    </div>
-                    <div class="posted">
-                        <p>Mary Jane</p>
-                        <p>1/1/2022</p>
-                    </div>
-                </div>
-                <div class="blog-card">
-                    <div class="card-image">
-                        <img src="./images/Laptop.png" />
-                    </div>
-                    <div class="blog-tags">
-                        <p class="small">Design</p>
-                        <div class="seperation-line"></div>
-                        <p class="small">Design</p>
-                        <div class="seperation-line"></div>
-                        <p class="small">Design</p>
-                    </div>
-                    <div class="title">
-                        <h5 class="subtitle-large semi-bold">How to tackle HTML/CSS as a beginner (All you need to know is in here!)</h5>
-                    </div>
-                    <div class="posted">
-                        <p>Mary Jane</p>
-                        <p>1/1/2022</p>
-                    </div>
-                </div>
-                <div class="blog-card">
-                    <div class="card-image">
-                        <img src="./images/Laptop.png" />
-                    </div>
-                    <div class="blog-tags">
-                        <p class="small">Design</p>
-                        <div class="seperation-line"></div>
-                        <p class="small">Design</p>
-                        <div class="seperation-line"></div>
-                        <p class="small">Design</p>
-                    </div>
-                    <div class="title">
-                        <h5 class="subtitle-large semi-bold">2022 Trending Web design</h5>
-                    </div>
-                    <div class="posted">
-                        <p>Mary Jane</p>
-                        <p>1/1/2022</p>
-                    </div>
-                </div>
             </div>
         </section>
     </div>
 </div>
+
+@code {
+    public void GoTo(string link) => Nav.NavigateTo("/blog/" + link);
+}
