--- a/SparcWeb/_Imports.razor
+++ b/SparcWeb/_Imports.razor
@@ -13,6 +13,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 
+@using Sparc.Notifications.Twilio;
 @using Sparc.Core
 @using SparcWeb
 @using SparcWeb.Pages
