--- a/SparcWeb/app.scss
+++ b/SparcWeb/app.scss
@@ -1,11 +1,12 @@
-﻿@import "wwwroot/Styles/Global/_variables.scss";
-@import "wwwroot/Styles/Global/_assets.scss";
-@import "wwwroot/Styles/Global/_typography.scss";
-@import "wwwroot/Styles/Global/_nav.scss";
-@import "wwwroot/Styles/Global/_projectcard.scss";
+﻿@import "wwwroot/Styles/Global/_variables";
+@import "wwwroot/Styles/Global/_assets";
+@import "wwwroot/Styles/Global/_typography";
+@import "wwwroot/Styles/Global/_nav";
+@import "wwwroot/Styles/Global/_projectcard";
+@import "wwwroot/Styles/Global/_communitycta";
 
-@import "wwwroot/Styles/Page/Index.scss";
-@import "wwwroot/Styles/Page/ProjectList.scss";
-@import "wwwroot/Styles/Page/Project.scss";
-@import "wwwroot/Styles/Page/BlogList.scss";
-@import "wwwroot/Styles/Page/Blog.scss";
+@import "wwwroot/Styles/Page/Index";
+@import "wwwroot/Styles/Page/ProjectList";
+@import "wwwroot/Styles/Page/Project";
+@import "wwwroot/Styles/Page/BlogList";
+@import "wwwroot/Styles/Page/Blog";
