--- a/SparcWeb/wwwroot/Styles/Global/_nav.scss
+++ b/SparcWeb/wwwroot/Styles/Global/_nav.scss
@@ -8,9 +8,10 @@ nav {
         justify-content: space-between;
         align-items: center;
         background: $yellow-100;
+        position: relative;
 
         .logo {
-            flex: 1;
+            //flex: 1;
             margin-right: 10px;
 
             img {
@@ -37,8 +38,9 @@ nav {
         }
 
         .community-join {
-            flex: 1;
-
+            width: 148px;
+            
+            /*
             .profile-pics-wrapper {
                 margin-right: 10px;
                 margin-left: 20px;
@@ -53,10 +55,35 @@ nav {
                         max-height: 24px;
                     }
                 }
+            }*/
+
+            > div {
+                position: absolute;
+                width: 435px;
+                right: 48px;
+                top: 34px;
             }
 
+            .toggle {
+                display: none;
+
+                &-show {
+                    display: block;
+                }
+            }
+
+            input {
+                width: 320px;
+                height: 34px;
+                border-radius: 40px;
+                background: $white;
+                padding: 9px 24px;
+                margin-right: 6px;
+                border: 1px solid $grey-100;
+            }
 
             button {
+                border-radius: 50px;
                 padding: 10px 24px;
                 background: $peach-500;
                 border: none;
@@ -67,7 +94,6 @@ nav {
             }
         }
     }
-
     //mobile menu
     .menu-toggle {
         display: none;
@@ -157,8 +183,8 @@ nav {
                     }
 
                     .community-join {
-                       background: $yellow-100;
-                       overflow: hidden;
+                        background: $yellow-100;
+                        overflow: hidden;
                     }
                 }
             }
