--- a/SparcFeatures/Pages/_Host.cshtml
+++ b/SparcFeatures/Pages/_Host.cshtml
@@ -8,16 +8,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"  />
     <title>Sparc</title>
     <base href="~/" />
-    <link href="css/app.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="https://api.kodekit.io/greffe-winterweight.css">
-    @*<link href="SparcWeb.styles.css" rel="stylesheet" />*@
+    <link href="css/app.css" rel="stylesheet" />
 </head>
 <body>
     <app>
-@*        <component type="typeof(SparcWeb.Shared.NavMenu)" render-mode="WebAssemblyPrerendered" />
-*@        <component type="typeof(SparcWeb.App)" render-mode="WebAssemblyPrerendered" />
+        <component type="typeof(SparcWeb.App)" render-mode="WebAssemblyPrerendered" />
     </app>
 
     <script src="_framework/blazor.webassembly.js"></script>
+    <script>
+        function textNodesUnder(el) {
+            var n, a = [], walk = document.createTreeWalker(el, NodeFilter.SHOW_TEXT, null, false);
+            while (n = walk.nextNode()) a.push(n);
+            return a;
+        }
+
+        window.ibis = {
+            textNodes: [],
+
+            getTextNodes: function () {
+                document.body.classList.add('ibis-translating');
+                textNodes = textNodesUnder(document.body).filter(x => x.parentNode.nodeName != 'SCRIPT' && x.textContent.trim());
+                return textNodes.map(n => n.textContent.trim());
+            },
+
+            translateTextNodes: function (translatedNodes) {
+                for (var i = 0; i < textNodes.length; i++) {
+                    if (textNodes[i].textContent != translatedNodes[i])
+                        textNodes[i].textContent = translatedNodes[i];
+                }
+                document.body.classList.remove('ibis-translating');
+                document.body.classList.add('ibis-translated');
+            }
+        }
+    </script>
 </body>
 </html>
