--- a/SparcWeb/Pages/BlogList.razor
+++ b/SparcWeb/Pages/BlogList.razor
@@ -4,32 +4,16 @@
     <div class="container">
         <div class="blog-hero">
             <h2 class="title-1">Blog</h2>
-@*            <div class="project-tags">
-                <button class="btn-small tag">Productivity</button>
-                <button class="btn-small tag">Productivity</button>
-                <button class="btn-small tag">Productivity</button>
-                <button class="btn-small tag">Productivity</button>
-                <button class="btn-small tag">Productivity</button>
-                <button class="btn-small tag">Productivity</button>
-                <button class="btn-small tag">Productivity</button>
-            </div>*@
         </div>
         
         <section class="blog-featured" @onclick="@(e => GoTo("law-of-100-behind-the-project"))">
             <div class="left">
                 <div class="blog-image-wrapper">
-                    <img src="/images/Laptop.png" />
+                    <img src="/images/lawof100.png" />
                 </div>
             </div>
             <div class="right">
                 <div class="wrapper">
-@*                    <div class="blog-tags">
-                    <p class="small">Design</p>
-                    <div class="seperation-line"></div>
-                    <p class="small">Design</p>
-                    <div class="seperation-line"></div>
-                    <p class="small">Design</p>
-                    </div>*@
                     <div class="title">
                         <h5 class="subtitle-large semi-bold">Law of 100 - Behind The Project</h5>
                         <p class="title-2">
@@ -48,64 +32,25 @@
                 </div>
             </div>
         </section>
-
-        <section class="blog-grid">
-            <div class="blog-list">
-                <div class="blog-card">
-                    <div class="card-image">
-                        <img src="./images/Laptop.png" />
-                    </div>
-                    <div class="blog-tags">
-                        <p class="small">Design</p>
-                        <div class="seperation-line"></div>
-                        <p class="small">Design</p>
-                        <div class="seperation-line"></div>
-                        <p class="small">Design</p>
-                    </div>
-                    <div class="title">
-                        <h5 class="subtitle-large semi-bold">2022 Trending Web design</h5>
-                    </div>
-                    <div class="posted">
-                        <p>Mary Jane</p>
-                        <p>1/1/2022</p>
-                    </div>
+        <section class="blog-featured" @onclick="@(e => GoTo("habit-building-tips"))">
+            <div class="left">
+                <div class="blog-image-wrapper">
+                    <img src="/images/lawof-blog.jpg" />
                 </div>
-                <div class="blog-card">
-                    <div class="card-image">
-                        <img src="./images/Laptop.png" />
-                    </div>
-                    <div class="blog-tags">
-                        <p class="small">Design</p>
-                        <div class="seperation-line"></div>
-                        <p class="small">Design</p>
-                        <div class="seperation-line"></div>
-                        <p class="small">Design</p>
-                    </div>
+            </div>
+            <div class="right">
+                <div class="wrapper">
                     <div class="title">
-                        <h5 class="subtitle-large semi-bold">How to tackle HTML/CSS as a beginner (All you need to know is in here!)</h5>
+                        <h5 class="subtitle-large semi-bold">Habit Building Tips from the Law of 100 Team</h5>
+                        <p class="title-2">
+                            Habits are hard to make, and almost harder to break. Once people get into a certain routine, 
+                            it can be extremely difficult to step outside of their comfort zone, and try something new. 
+                            Our Law of 100 team has compiled a list of tips to help you achieve the change you desire.
+                        </p>
                     </div>
                     <div class="posted">
-                        <p>Mary Jane</p>
-                        <p>1/1/2022</p>
-                    </div>
-                </div>
-                <div class="blog-card">
-                    <div class="card-image">
-                        <img src="./images/Laptop.png" />
-                    </div>
-                    <div class="blog-tags">
-                        <p class="small">Design</p>
-                        <div class="seperation-line"></div>
-                        <p class="small">Design</p>
-                        <div class="seperation-line"></div>
-                        <p class="small">Design</p>
-                    </div>
-                    <div class="title">
-                        <h5 class="subtitle-large semi-bold">2022 Trending Web design</h5>
-                    </div>
-                    <div class="posted">
-                        <p>Mary Jane</p>
-                        <p>1/1/2022</p>
+                        <p></p>
+                        <p>10/20/2022</p>
                     </div>
                 </div>
             </div>
