--- a/SparcWeb/Shared/ProjectCard.razor
+++ b/SparcWeb/Shared/ProjectCard.razor
@@ -13,7 +13,7 @@
     </div>
     <div class="card-header">
         <h5 class="title-2 semi-bold">@Title</h5>
-        <a href="@Link" class="image-wrapper" title="Site Link">
+        <a href="@Link" target="_blank" title="Site Link">
             <img src="images/icons/Up-Right.svg" />
         </a>
     </div>
