--- a/SparcWeb/wwwroot/Styles/Global/_projectcard.scss
+++ b/SparcWeb/wwwroot/Styles/Global/_projectcard.scss
@@ -13,6 +13,11 @@
         justify-content: space-between;
         margin-bottom: 8px;
         margin-top: 20px;
+
+        //site-link
+        a {
+            cursor: pointer;
+        }
     }
 
     .btn-small {
