--- a/SparcWeb/wwwroot/Styles/Page/BlogList.scss
+++ b/SparcWeb/wwwroot/Styles/Page/BlogList.scss
@@ -1,6 +1,8 @@
 ﻿@import "../Global/_variables.scss";
 
 .blog-list-page {
+    margin-bottom: 100px;
+    
     .blog {
         &-hero {
             max-width: 72%;
@@ -23,12 +25,14 @@
             gap: 42px;
             padding: 0;
             cursor: pointer;
+            margin-bottom: 30px;
 
             .left {
                 width: 100%;
 
                 img {
-                    width: 100%
+                    width: 100%;
+                    border-radius: 6px;
                 }
             }
 
